<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/delete_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/denote_claim"
        android:layout_marginTop="16dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/edit_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_claim"
        android:layout_marginTop="16dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/claim_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_claim"
        android:layout_marginTop="14dp"
        android:text="@string/mail" />

    <Button
        android:id="@+id/denote_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/claim_mail"
        android:layout_marginTop="14dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/view_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/delete_claim"
        android:layout_marginTop="16dp"
        android:text="@string/view_expenses" />

    <TextView
        android:id="@+id/configure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/claim_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/view_claims"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/configure_title"
        android:text="@string/view_claims" />

    <Button
        android:id="@+id/add_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_claims"
        android:layout_marginTop="14dp"
        android:text="@string/add" />

</RelativeLayout>
