<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/options_exp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/add_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/options_exp_title"
        android:layout_marginTop="34dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/edit_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_exp"
        android:layout_marginTop="46dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/delete_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_exp"
        android:layout_marginTop="50dp"
        android:text="@string/delete" />

</RelativeLayout>
