<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/mail_claim_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/mail_claim"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/select_claim_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mail_claim_title"
        android:layout_below="@+id/mail_claim_title"
        android:layout_marginTop="20dp"
        android:text="@string/select_claim"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/select_edit_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_claim_mail"
        android:layout_below="@+id/select_claim_mail" />

    <TextView
        android:id="@+id/email_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_edit_claim"
        android:layout_below="@+id/select_edit_claim"
        android:layout_marginTop="17dp"
        android:text="@string/email_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/email_to_ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_to"
        android:layout_below="@+id/email_to"
        android:ems="10"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/send_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_to_ins"
        android:layout_marginTop="69dp"
        android:layout_toRightOf="@+id/select_claim_mail"
        android:onClick="mailClaim"
        android:text="@string/send" />

</RelativeLayout>
