<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/del_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/delete_expense"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/select_exp_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/del_exp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/select_expense"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/select_exp_to_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_exp_del"
        android:layout_below="@+id/select_exp_del" />

    <Button
        android:id="@+id/delete_butt_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="deleteExp"
        android:text="@string/delete" />

</RelativeLayout>
