<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/delete_claim_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/delete_claim"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/Select_claim_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_claim_title"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/delete_claim_title"
        android:text="@string/select_claim"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/select_claim_to_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Select_claim_delete"
        android:layout_below="@+id/Select_claim_delete"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/delete_claim_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/delete_claim_title"
        android:layout_alignRight="@+id/delete_claim_title"
        android:layout_below="@+id/select_claim_to_delete"
        android:layout_marginTop="113dp"
        android:onClick="deleteClaim"
        android:text="@string/delete" />

</RelativeLayout>
