<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/view_exp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_expenses"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/select_claim_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_exp_title"
        android:text="@string/select_claim"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/select_claim_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/view_exp_title"
        android:layout_below="@+id/select_claim_view" />

    <ListView
        android:id="@+id/expense_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Expenses_view"
        android:layout_marginTop="15dp" >

    </ListView>

    <TextView
        android:id="@+id/Expenses_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/select_claim_list"
        android:text="@string/expenses"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
